--- a/package.json
+++ b/package.json
@@ -9,7 +9,16 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/stats.js": "^0.17.0",
+    "@types/three": "^0.146.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "axios": "^1.2.1",
+    "buffer": "^6.0.3",
+    "localforage": "^1.10.0",
+    "stats.js": "^0.17.0",
+    "three": "^0.147.0"
   }
 }
